--- a/desktop-themes/ContrastHighInverse/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/ContrastHighInverse/gtk-3.0/gtk-widgets.css
@@ -28,6 +28,7 @@
     -GtkStatusbar-shadow-type: none;
 
     background-clip: padding-box;
+    outline-width: 0px; /* disable ugly focus-line */
     -gtk-icon-style: regular; /* disable symbolic icons */
 }
 
@@ -1117,6 +1118,12 @@ GtkViewport {
 .view:selected:focus {
     background-color: @theme_fg_color;
     color: @theme_base_color;
+}
+
+GtkIconView,
+GtkViewport {
+    /* avoid resizing theme thumbnails in mate-appearance-properties */
+    padding: 0px;
 }
 
 GtkIconView.view.cell {
