--- a/desktop-themes/Menta/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/Menta/gtk-3.0/gtk-widgets.css
@@ -33,6 +33,7 @@
 	outline-offset: -3px; /* 2px */
 	outline-width: 0px; /* disable ugly focus-line */
 	outline-radius: 2px;
+	-gtk-icon-style: regular; /* disable symbolic icons */
 }
 
 /***************
@@ -3395,6 +3396,12 @@ GtkTreeView:selected:focus {
 	outline-color: mix(@theme_selected_fg_color, @theme_selected_bg_color, 0.30);
 }
 
+GtkIconView,
+GtkViewport {
+    /* avoid resizing theme thumbnails in mate-appearance-properties */
+    padding: 0px;
+}
+
 GtkIconView.cell:selected,
 GtkIconView.cell:selected:focus {
 	border-radius: 4px;
@@ -3405,6 +3412,11 @@ GtkIconView.cell:selected:focus {
 	outline-color: @treeview_focus_border;
 	outline-style: solid;
 	outline-offset: 3px;
+}
+
+GtkIconView.cell:hover,
+GtkIconView.cell:hover:focus {
+	border-radius: 4px;
 }
 
 .view {
